# website

./: .gitignore  HasCriteria.csv  JudgesProject.csv  Pipfile  attendee.csv  diet_restriction_count.sql  flake.nix  get_max_attendee_id.sql  get_max_judge_id.sql  get_prize_names.sql  judge.csv  project_for_prize.csv  pyproject.toml  requirements.txt
backend/: 2021_02_25_dump.sql  _localhost-2020_04_17_12_31_08-dump.sql  create_judge_preference.sql
backend/fake_data/: HasCriteria.csv  JudgesProject.csv  ScoringCategory.csv  attendee.csv  dietary_restrictions.csv  judge.csv  prize.csv  project.csv  project_for_prize.csv
backend/sql_files/: diet_restriction_count.sql  each_project_score.sql  get_max_attendee_id.sql  get_max_judge_id.sql  get_max_project_id.sql  get_prize_names.sql  get_winning_projects.sql  multiple_tracks.sql  num_submissions.sql  shirt_size.sql
database_files/: Attendee.ibd  DietRestriction.ibd  HasCriteria.ibd  Judge.ibd  JudgesProject.ibd  Prize.ibd  Project.ibd  ProjectForPrize.ibd  ScoringCategory.ibd
frontend/: basic_operations.py  requirements.txt
frontend/static/: menustyle.css  style.css
frontend/templates/: attendee_registration_confirmation.html  attendee_registration_form.html  judge_registration_confirmation.html  judge_registration_form.html  judge_score.html  judge_score_confirmation.html  judge_score_email.html  main_menu.html  project_create.html  project_creation_confirmation.html  project_join.html  project_join_confirmation.html  project_submission_form.html  (+1 more)
frontend_files/: basic_operations.py
(+9 files in other folders)
