[tool.poetry]
name = "hackcwru-website"
version = "0.1.0"
description = "Website for the HackCWRU organization"
authors = ["Imran Hossain <imran@case.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Jinja2 = "^2.11.3"
mysqlclient = "^2.0.3"
Flask-MySQLdb = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
